# vscode-latency-monitor

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SHARING_GUIDE.md  LAN_NETWORK_CONFIG.md  LICENSE  PROJECT_SUCCESS_LOG.md  QUICK_REFERENCE.md  README.md  READY_TO_SHARE.md  SECURITY.md  SESSION_SUMMARY_2025-10-15.md  SQLX_RUST_INTEGRATION_GUIDE.md  SQL_RUST_INTEGRATION_RESEARCH.md  UPLOAD_INSTRUCTIONS.md  WALL_SYSTEM_UPDATE.md
src/: config.rs  dashboard.rs  main.rs  models.rs  monitor.rs  storage.rs  telemetry.rs
static/: dashboard.html
system-notifications/: README.md  server.py
