[package]
name = "vscode-latency-monitor"
version = "1.0.0"
edition = "2021"
authors = ["Enhanced Wall Notification System"]
description = "High-performance VS Code latency monitoring system with real-time metrics"
license = "MIT"
repository = "https://github.com/enhanced-wall-system/vscode-latency-monitor"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
sysinfo = "0.30"
crossbeam-channel = "0.5"
dirs = "5.0"
toml = "0.8"
